# tap-rust-sdk

./: Cargo.toml  Justfile  crates-io.md
examples/: events.rs  example.rs
src/: client.rs  event_manager.rs  lib.rs
src/types/: air_gestures.rs  input_type.rs  mod.rs  mouse_mode.rs  uuid.rs
src/types/uuid/: characteristics.rs  mod.rs  services.rs
